# moriarty

./: BASH_RULES.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  deny.toml  false  flake.nix  treefmt.toml
.config/: nextest.toml  semgrep_rules.yaml  tools.toml
.tmp/: pi-cost.err  pi-cost.out
crates/claude_logs/: Cargo.toml
crates/claude_logs/src/: lib.rs  model.rs  parser.rs
crates/claude_logs/src/parser/: tests.rs
crates/cost_analyzer/: Cargo.toml
crates/cost_analyzer/src/: lib.rs  logs.rs  reader.rs  test_support.rs
crates/moriarty/: Cargo.toml
crates/moriarty/src/: checks.rs  event_bus.rs  hashing.rs  main.rs  persistence.rs  repository.rs  test_helpers.rs
crates/moriarty/src/api_pricing/: analyzer.rs  analyzer_tests.rs  line_counter.rs  mod.rs  pricing.rs  tests.rs  time_filter.rs
crates/moriarty/src/approval_tui/: approval_state.rs  mod.rs  renderer.rs  tests.rs
crates/moriarty/src/cost_report/: charts.rs  mod.rs  render.rs  time_filter.rs
crates/moriarty/src/hooks/: bash_rules.rs  command_split.rs  mod.rs  parser.rs  report.rs  result.rs  tests.rs  tool_rules.rs  tracing.rs
crates/moriarty/src/logs/: formatter.rs  message_modal.rs  mod.rs  parser.rs  thread_view.rs
crates/moriarty/src/logs/parser/: tests.rs
crates/moriarty/src/mcp/: approvals.rs  git_read_only.rs  jj_read_only.rs  mod.rs  read_only.rs  tool_runner.rs
crates/moriarty/src/mcp/tool_runner/: tests.rs
crates/moriarty/src/pi_cost/: analyzer.rs  mod.rs  pricing.rs
crates/moriarty/src/project_config/: approvals.rs  config.rs  mod.rs  runner.rs
crates/moriarty/src/project_config/approvals/: tests.rs
crates/moriarty/src/rules/: mod.rs
crates/moriarty/src/test_runner/: mod.rs
crates/moriarty/src/tui/: app.rs  event_bus.rs  mod.rs
crates/moriarty/src/user_config/: mod.rs
crates/moriarty/tests/: api_pricing_cli.rs  pi_cost_cli.rs
crates/my-workspace-hack/: Cargo.toml
crates/pi_logs/: Cargo.toml
crates/pi_logs/src/: lib.rs  parser.rs
crates/pi_logs/src/parser/: tests.rs
crates/pi_logs/tests/: parse_pi_sessions_binary.rs  parser_fixtures.rs
crates/pi_logs/tests/fixtures/pi_sessions_ok/: recent_session.jsonl
doc/man/: moriarty-bash-rules.5  moriarty-tool-rules.5  moriarty.1
