[workspace]
resolver = "2"
# Note that we define member crates with a wildcard here and NOT with explicit
# paths because the flake.nix is written in a way such that top-level members
# (`my-cli` and `my-server`) are built as different derivations which avoid being
# rebuilt if the other package's sources change.
members = ["crates/*"]

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
debug = true

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.metadata.crane]
name = "my-workspace"

[workspace.dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.49", features = ["derive", "env"] }
futures = "0.3"
miette = { version = "7.6.0", features = ["fancy"] }
regex = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = [
  "macros",
  "parking_lot",
  "rt-multi-thread",
  "sync",
  "fs",
  "time",
  "process",
] }
tracing = "0.1"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
