[package]
name = "cost_analyzer"
version.workspace = true
edition.workspace = true

[dependencies]
async-walkdir = "2.1.0"
chrono = { workspace = true }
futures = { workspace = true }
miette = { workspace = true }
pi_logs = { path = "../pi_logs" }
rust_decimal = { workspace = true, features = ["serde-with-str"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1.18"
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
