[package]
name = "cost_analyzer"
version.workspace = true
edition.workspace = true

[dependencies]
async-walkdir = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
miette = { workspace = true }
claude_logs = { path = "../claude_logs" }
pi_logs = { path = "../pi_logs" }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
my-workspace-hack = { version = "0.1", path = "../my-workspace-hack" }

[dev-dependencies]
tempfile = "3"
