[package]
name = "moriarty"
version.workspace = true
edition.workspace = true

[dependencies]
async-walkdir = "2.0"
chrono = { workspace = true }
clap = { workspace = true }
claude_logs = { path = "../claude_logs" }
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = { workspace = true }
hex = "0.4"
miette = { workspace = true }
rayon = "1.10"
ratatui = "0.29.0"
regex = { workspace = true }
rmcp = { version = "0.8.3", features = ["schemars", "transport-io"] }
schemars = "1.0.4"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
shell-words = "1.1"
similar = "2.7.0"
tabled = { version = "0.20", features = ["derive"] }
tokio = { workspace = true }
tracing = { workspace = true }
fs2 = "0.4"
toml = "0.9.8"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tui-scrollview = "0.5.1"
uuid = { workspace = true }
which = "7.0"
xdg = "3.0.0"

[dev-dependencies]
tempfile = "3"
