[package]
name = "moriarty"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Pure-Rust bash-aware shell parser used to split compound Bash commands into
# independently-evaluable leaves. Intentionally pinned with NO default features:
# the `winnow-parser` feature would route parsing through the unsafe-heavy winnow
# crate, while the default `peg`-generated parser is safe recursive-descent.
brush-parser = "0.4"
chrono = { workspace = true }
clap = { workspace = true }
claude_logs = { path = "../claude_logs" }
cost_analyzer = { path = "../cost_analyzer" }
crossterm = { version = "0.28.1", features = ["event-stream"] }
fs2 = "0.4"
futures = { workspace = true }
hex = "0.4"
miette = { workspace = true }
my-workspace-hack = { version = "0.1", path = "../my-workspace-hack" }
pi_logs = { path = "../pi_logs" }
ratatui = "0.30.0"
regex = { workspace = true }
rmcp = { version = "0.17.0", features = ["schemars", "transport-io"] }
rust_decimal = { workspace = true }
schemars = "1.0.4"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
shell-words = "1.1"
tabled = { version = "0.20", features = ["derive"] }
tokio = { workspace = true }
toml = "0.9.8"
tracing = { workspace = true }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tui-scrollview = "0.6.4"
unicode-width = "0.2"
which = "7.0"
xdg = "3.0.0"

[dev-dependencies]
tempfile = "3"
