[package]
name = "pi_logs"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
miette = { workspace = true }
rust_decimal = { version = "1.38", features = ["serde-with-str"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2.0"
uuid = { workspace = true }
walkdir = "2.5"

[[bin]]
name = "parse_pi_sessions"
path = "src/bin/parse_pi_sessions.rs"

[dev-dependencies]
